# project

./: .gitignore  AABB.cpp  AABB.hpp  Actor.cpp  Actor.hpp  Actors.cpp  Actors.hpp  Address.hpp  Archive.cpp  ArchiveTest.cpp  Archiver.hpp  Camera.cpp  Camera.hpp  Compress.cpp  Compress.hpp  Connection.cpp  Connection.hpp  Cuboid.cpp  Cuboid.hpp  Deltas.hpp  Force.hpp  G_Cuboid.cpp  G_Cuboid.hpp  L_Cuboid.cpp  L_Cuboid.hpp  MTV.hpp  Main.cpp  Net.cpp  Network_Test.cpp  Octree.cpp  Octree.hpp  Octtree.cpp  Octtree.hpp  P_State.cpp  P_State.cpp~  P_State.hpp  Packet.cpp  Packet.hpp  Packet_Header.cpp  Packet_Header.hpp  (+54 more)
before/VulkanProject/: Camera.cpp  Camera.hpp  Helper.cpp  Helper.hpp  Input.cpp  Input.hpp  MyVulkan.cpp  MyVulkan.hpp  Physics.cpp  Physics.hpp  TheMaster.cpp  TheMaster.hpp  Thing.cpp  Thing.hpp  VDeleter.hpp  World.cpp  World.hpp  dep.sh  doMe.sh  runMe.sh  session.vim  vulkanTest.cpp
before/VulkanProject/report/: lat  log  log.backup  notes  progress_report.bib  progress_report.tex  session.vim  spec.bib  spec.tex
before/VulkanProject/shaders/: shader.frag  shader.vert
before/VulkanSDK/1.0.30.0/: Getting_Started.html  Release_Notes.html  setup-env.sh
before/VulkanSDK/1.0.30.0/config/: vk_layer_settings.txt
before/VulkanSDK/1.0.30.0/doc/: LoaderAndLayerInterface.html  advanced_topics.html  apispec.html  getting_started.html  layers.html  release_notes-1.0.html  spirv_toolchain.html  trace_tools.html  validation_layer_details.html  vkspec.html  vulkan_samples.html
before/VulkanSDK/1.0.30.0/doc/vkspec.chunked/: apa.html  apas01.html  apas02.html  apas03.html  apas04.html  apb.html  apbs01.html  apbs02.html  apbs03.html  apc.html  apcs01.html  apcs02.html  apcs03.html  apcs04.html  apcs05.html  apd.html  apds01.html  apds02.html  apds03.html  apds04.html  ape.html  apes01.html  apes02.html  apes03.html  apes04.html  apf.html  ch01.html  ch01s01.html  ch01s02.html  ch01s03.html  ch01s04.html  ch02.html  ch02s01.html  ch02s02.html  ch02s03.html  ch02s04.html  ch02s05.html  ch02s06.html  ch02s07.html  ch02s08.html  (+185 more)
before/VulkanSDK/1.0.30.0/examples/: CMakeLists.txt
before/VulkanSDK/1.0.30.0/source/layers/: api_dump.cpp  parameter_validation.h  vk_api_dump_helper_cpp.h  vk_dispatch_table_helper.h  vk_struct_size_helper.c  (+2 more)
freetype-2.7.1/builds/unix/: config.status  freetype-config  freetype2.pc  libtool  unix-cc.mk  unix-def.mk
freetype-2.7.1/objs/: apinames  autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftexport.sym  ftfntfmt.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlcdfil.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  (+5 more)
freetype-2.7.1/objs/.libs/: libfreetype.lai  libfreetype.so.6.13.0  libfreetype.ver
graphics_cw_zip/: AABB.hpp  Cuboid.cpp  Cuboid.hpp  Movement.cpp  Movement.hpp  Octtree.cpp  Octtree.hpp  Shape.cpp  Shape.hpp  State.cpp  State.hpp  Util.hpp  arm  arm.cpp  crap.hpp  temp.sh  vertex.shader
include/: freetype
lib/: libGLEW.so.2.0  libglfw.so.3
lib/cmake/glfw3/: glfw3Targets.cmake
old/: Address.cpp  Net.cpp  Socket.cpp  Socket.hpp
shaders/: light.fragment.shader  lit.fragment.shader  text.fragment.shader
(+22 files in other folders)
